[package]
name = "zbc-fhe-tool"
version = "0.1.1"
authors = ["Zama <hello@zama.ai>"]
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/zama-ai/zbc-fhe-tool"
repository = "https://github.com/zama-ai/zbc-fhe-tool"
publish = false

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.18", features = ["derive"] }
serde = "1.0"
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "0.3.0-beta.0", features = ["boolean", "experimental-force_fft_algo_dif4", "shortint", "integer"] }
