[package]
name = "fhevm-tfhe-cli"
version = "0.2.4"
authors = ["Zama <hello@zama.ai>"]
edition = "2021"
license = "BSD-3-Clause-Clear"
homepage = "https://github.com/zama-ai/fhevm-tfhe-cli"
repository = "https://github.com/zama-ai/fhevm-tfhe-cli"
publish = false

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.18", features = ["derive"] }
serde = "1.0"
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "tfhe-rs-0.6.1", features = ["boolean", "experimental-force_fft_algo_dif4", "shortint", "integer"] }
